@@ -1,31 +1,24 @@
 package view;
 
-import core.CFG.Utils.ASTHelper;
-import core.TestGeneration.ConcolicTesting;
-import core.TestGeneration.result.ParameterData;
-import core.TestGeneration.result.TestData;
-import core.TestGeneration.result.TestResult;
+import core.cfg.Coverage;
+import core.generation.ConcolicTesting;
+import core.generation.Project;
+import core.parser.ParseEntry;
+import core.testdriver.TestData;
+import core.testdriver.TestResult;
 import javafx.beans.property.SimpleStringProperty;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
 import javafx.fxml.FXML;
 import javafx.scene.control.*;
 import javafx.stage.FileChooser;
-import org.eclipse.jdt.core.JavaCore;
 import org.eclipse.jdt.core.dom.*;
 
 import java.io.File;
-import java.io.FileInputStream;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.StandardCopyOption;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.stream.Collectors;
-import java.util.zip.ZipEntry;
-import java.util.zip.ZipInputStream;
 
 
 public class ToolView {
@@ -39,10 +32,10 @@ public class ToolView {
     public Label memoryUsageLabel;
     public Label runtimeLabel;
     public TreeView<String> projectTree;
-    public TableView<TestData> reportTable;
-    public TableColumn<TestData, String> testInputsColumn;
-    public TableColumn<TestData, String> testCoverageColumn;
-    public TableColumn<TestData, String> testOutputsColumn;
+    public TableView<FormattedTestData> reportTable;
+    public TableColumn<FormattedTestData, String> testInputsColumn;
+    public TableColumn<FormattedTestData, String> testCoverageColumn;
+    public TableColumn<FormattedTestData, String> testOutputsColumn;
     public ListView<String> sourceList;
 
     // Maps to keep track of which tree items correspond to which files/methods
@@ -51,18 +44,22 @@ public class ToolView {
     private final Map<File, List<String>> fileContentCache = new HashMap<>();
 
     private File currentFile;
+    private Project currentProject;
 
     private static class MethodLocation {
         final File file;
         final int startLine;
         final int endLine;
         final String methodName;
+        final MethodDeclaration methodDeclaration;
 
-        MethodLocation(File file, int startLine, int endLine, String methodName) {
+        MethodLocation(File file, int startLine, int endLine, String methodName,
+                       MethodDeclaration methodDeclaration) {
             this.file = file;
             this.startLine = startLine;
             this.endLine = endLine;
             this.methodName = methodName;
+            this.methodDeclaration = methodDeclaration;
         }
     }
 
@@ -86,28 +83,28 @@ public class ToolView {
         // Configure report table columns
         if (testInputsColumn != null) {
             testInputsColumn.setCellValueFactory(cd -> {
-                TestData data = cd.getValue();
-                if (data == null || data.getParameterDataList() == null) {
+                FormattedTestData data = cd.getValue();
+                if (data == null || data.input() == null) {
                     return new SimpleStringProperty("");
                 }
-                String inputs = data.getParameterDataList().stream()
-                        .map(p -> p.getName() + ":" + ParameterData.formatValue(p.getValue()))
+                String inputs = data.input().entrySet().stream()
+                        .map(entry -> entry.getKey() + ":" + formatValue(entry.getValue()))
                         .collect(Collectors.joining(", "));
                 return new SimpleStringProperty(inputs);
             });
         }
         if (testCoverageColumn != null) {
             testCoverageColumn.setCellValueFactory(cd -> {
-                TestData data = cd.getValue();
-                String cov = data != null ? String.format("%.2f%%", data.getUnitCoverage()) : "";
+                FormattedTestData data = cd.getValue();
+                String cov = data != null ? String.valueOf(data.coverage()) : "0";
                 return new SimpleStringProperty(cov);
             });
         }
         if (testOutputsColumn != null) {
             testOutputsColumn.setCellValueFactory(cd -> {
-                TestData data = cd.getValue();
-                Object output = data != null ? data.getOutput() : null;
-                return new SimpleStringProperty(output == null ? "null" : ParameterData.formatValue(output));
+                FormattedTestData data = cd.getValue();
+                String output = data != null ? data.output() : "";
+                return new SimpleStringProperty(output == null ? "null" : output);
             });
         }
 
@@ -170,61 +167,29 @@ public class ToolView {
     }
 
     private void loadProjectFromZip(File zipFile) throws IOException {
-        Path tempRoot = Files.createTempDirectory("ide_preview_");
+        fileItemMap.clear();
+        methodItemMap.clear();
+        fileContentCache.clear();
 
-        tempRoot.toFile().deleteOnExit();
+        currentProject = new Project(zipFile.toPath());
+        TreeItem<String> rootItem = new TreeItem<>(zipFile.getName());
+        rootItem.setExpanded(true);
 
-        try (ZipInputStream zis = new ZipInputStream(new FileInputStream(zipFile))) {
-            ZipEntry entry;
-            while ((entry = zis.getNextEntry()) != null) {
-                Path target = tempRoot.resolve(entry.getName()).normalize();
-
-                if (!target.startsWith(tempRoot)) {
-                    throw new IOException("Entry is outside of the target dir: " + entry.getName());
-                }
-
-                if (entry.isDirectory()) {
-                    Files.createDirectories(target);
-                } else {
-                    Files.createDirectories(target.getParent());
-                    Files.copy(zis, target, StandardCopyOption.REPLACE_EXISTING);
-                }
-                zis.closeEntry();
-            }
+        for (ParseEntry entry : currentProject.getEntries()) {
+            TreeItem<String> fileItem = new TreeItem<>(entry.relativePath().toString());
+            fileItemMap.put(fileItem, entry.absolutePath().toFile());
+            analyzeParseEntry(fileItem, entry);
+            rootItem.getChildren().add(fileItem);
         }
-
-        TreeItem<String> rootItem = createTree(tempRoot.toFile());
-        rootItem.setValue(zipFile.getName());
 
         projectTree.setRoot(rootItem);
     }
 
 
-    public TreeItem<String> createTree(File file) {
-        TreeItem<String> item = new TreeItem<>(file.getName());
-
-        if (file.isDirectory()) {
-            File[] children = file.listFiles();
-            if (children != null) {
-                for (File child : children) {
-                    item.getChildren().add(createTree(child));
-                }
-            }
-        } else if (file.getName().endsWith(".java")) {
-            // Remember that this tree item represents a Java source file
-            fileItemMap.put(item, file);
-            analyzeJavaFile(item, file);
-        }
-        return item;
-    }
-
-    private void analyzeJavaFile(TreeItem<String> fileItem, File file) {
+    private void analyzeParseEntry(TreeItem<String> fileItem, ParseEntry entry) {
         try {
-            CompilationUnit cu = getCompilationUnit(file);
-            if (cu == null) {
-                fileItem.getChildren().add(new TreeItem<>("[Error parsing file]" + file.getName()));
-                return;
-            }
+            CompilationUnit cu = entry.compilationUnit();
+            File file = entry.absolutePath().toFile();
 
             cu.accept(new ASTVisitor() {
                 @Override
@@ -245,7 +210,8 @@ public class ToolView {
 
                     int startLine = cu.getLineNumber(node.getStartPosition());
                     int endLine = cu.getLineNumber(node.getStartPosition() + node.getLength());
-                    methodItemMap.put(methodItem, new MethodLocation(file, startLine, endLine, methodName));
+                    methodItemMap.put(methodItem,
+                            new MethodLocation(file, startLine, endLine, methodName, node));
 
                     return false;
                 }
@@ -253,24 +219,6 @@ public class ToolView {
 
         } catch (Exception e) {
             fileItem.getChildren().add(new TreeItem<>("[Error parsing: " + e.getMessage() + "]"));
-        }
-    }
-
-    private CompilationUnit getCompilationUnit(File file) {
-        try {
-            String source = new String(Files.readAllBytes(file.toPath()));
-            ASTParser parser = ASTParser.newParser(AST.JLS8);
-            parser.setSource(source.toCharArray());
-            parser.setKind(ASTParser.K_COMPILATION_UNIT);
-
-            Map<String, String> options = JavaCore.getOptions();
-            JavaCore.setComplianceOptions(JavaCore.VERSION_1_8, options);
-            parser.setCompilerOptions(options);
-
-            return (CompilationUnit) parser.createAST(null);
-        } catch (IOException e) {
-            System.err.println("Error reading file: " + file.getPath() + " - " + e.getMessage());
-            return null;
         }
     }
 
@@ -315,21 +263,24 @@ public class ToolView {
         }
 
         MethodLocation loc = methodItemMap.get(selectedItem);
-        File file = loc.file;
-        String methodName = loc.methodName;
 
-        ASTHelper.Coverage coverage = getSelectedCoverage();
-        ConcolicTesting engine = createConcolicEngine();
+        Coverage coverage = getSelectedCoverage();
 
         try {
-            TestResult result = engine.runConcolicTesting(
-                    1,
-                    file.getAbsolutePath(),
-                    file.getName(),
-                    methodName,
+            CompilationUnit rootAst = currentProject.getRootAST(loc.methodDeclaration);
+            if (rootAst == null) {
+                throw new IllegalStateException("Cannot find root AST for selected method: " + loc.methodName);
+            }
+
+            long startTime = System.currentTimeMillis();
+            TestResult result = ConcolicTesting.getInstance().generate(
+                    loc.methodDeclaration,
+                    rootAst,
                     coverage
             );
-            updateSummary(result);
+            long elapsedMillis = System.currentTimeMillis() - startTime;
+
+            updateSummary(result, elapsedMillis);
             updateReportTable(result);
         } catch (Exception e) {
             new Alert(Alert.AlertType.ERROR,
@@ -339,47 +290,88 @@ public class ToolView {
         }
     }
 
-    private ASTHelper.Coverage getSelectedCoverage() {
+    private Coverage getSelectedCoverage() {
         if (branchCoverage.isSelected()) {
-            return ASTHelper.Coverage.BRANCH;
+            return Coverage.BRANCH;
         }
         if (mcdcCoverage.isSelected()) {
-            return ASTHelper.Coverage.MCDC;
+            return Coverage.MCDC;
         }
-        return ASTHelper.Coverage.STATEMENT;
+        return Coverage.STATEMENT;
     }
 
-    private ConcolicTesting createConcolicEngine() {
-        if (greedyPathFinder.isSelected()) {
-            // TODO: implement others if needed
-            return new ConcolicTesting();
-        }
-        return new ConcolicTesting();
-    }
-
-    private void updateSummary(TestResult result) {
+    private void updateSummary(TestResult result, long elapsedMillis) {
         if (result == null) {
             return;
         }
         if (fullCoverageLabel != null) {
-            fullCoverageLabel.setText(String.format("%.2f%%", result.getCoveragePercent()));
+            fullCoverageLabel.setText(String.format("%.2f%%", calculateCoveragePercent(result)));
         }
         if (memoryUsageLabel != null) {
-            memoryUsageLabel.setText(String.format("%.2f MB", result.getMemoryUsed()));
+            memoryUsageLabel.setText(String.format("%.2f MB", result.memoryUsageBytes() / (1024.0 * 1024.0)));
         }
         if (runtimeLabel != null) {
-            runtimeLabel.setText(String.format("%.2f ms", result.getTimeToGenerate()));
+            runtimeLabel.setText(String.format("%d ms", elapsedMillis));
         }
     }
 
     private void updateReportTable(TestResult result) {
-        if (reportTable == null) {
+        if (reportTable == null || result == null) {
             return;
         }
-        List<TestData> data = result != null ? result.getFullTestData().stream().toList() : null;
-        ObservableList<TestData> items = data == null
-                ? FXCollections.observableArrayList()
-                : FXCollections.observableArrayList(data);
+        int total = result.fullCoverage().getCovered().size()
+                + result.fullCoverage().getUncovered().size()
+                + result.fullCoverage().getSkipped().size();
+        List<TestData> data = result.testDataList();
+        List<FormattedTestData> formattedData = data.stream()
+                .map(d -> new FormattedTestData(total, d))
+                .collect(Collectors.toList());
+        ObservableList<FormattedTestData> items = FXCollections.observableArrayList(formattedData);
         reportTable.setItems(items);
+    }
+
+
+    static class FormattedTestData {
+        private Map<String, Object> input;
+        private int coverage;
+        private String output;
+        public FormattedTestData(int numberOfNode, TestData td) {
+            this.input = td.input();
+            this.output = td.output();
+            this.coverage = td.coveredNodeIds().size() * 100 / numberOfNode;
+        }
+
+        public Map<String, Object> input() {
+            return input;
+        }
+
+        public String output() {
+            return output;
+        }
+
+        public int coverage() {
+            return coverage;
+        }
+    }
+
+    private double calculateCoveragePercent(TestResult result) {
+        int covered = result.fullCoverage().getCovered().size();
+        int total = covered
+                + result.fullCoverage().getUncovered().size()
+                + result.fullCoverage().getSkipped().size();
+        return total == 0 ? 0.0 : covered * 100.0 / total;
+    }
+
+    private String formatValue(Object value) {
+        if (value instanceof int[] array) return Arrays.toString(array);
+        if (value instanceof long[] array) return Arrays.toString(array);
+        if (value instanceof short[] array) return Arrays.toString(array);
+        if (value instanceof byte[] array) return Arrays.toString(array);
+        if (value instanceof char[] array) return Arrays.toString(array);
+        if (value instanceof boolean[] array) return Arrays.toString(array);
+        if (value instanceof float[] array) return Arrays.toString(array);
+        if (value instanceof double[] array) return Arrays.toString(array);
+        if (value instanceof Object[] array) return Arrays.deepToString(array);
+        return String.valueOf(value);
     }
 }
